# QGameEngine

./: .gitmodules  CMakeLists.txt  README.md
assets/levels/: test.qlvl
assets/shaders/: basic.frag  basic.vert  lit.frag  lit.vert  textured.frag  textured.vert
src/: main.cpp
src/engine/core/: input_manager.cpp  input_manager.h  mesh_factory.cpp  mesh_factory.h  resource_manager.cpp  resource_manager.h  window.cpp  window.h
src/engine/ecs/: components.h  scene_setup.cpp  scene_setup.h
src/engine/ecs/systems/: movement_system.cpp  movement_system.h  render_system.cpp  render_system.h
src/engine/level/: level.h  level_loader.cpp  level_loader.h
src/engine/renderer/: camera.cpp  camera.h  mesh.cpp  mesh.h  obj_loader.cpp  obj_loader.h  shader.cpp  shader.h  stb_image_impl.cpp  texture.cpp  texture.h
